--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "Jamie McCann", email = "jamie.mccann@umu.se" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "duckdb>=1.2.0",
+]
 
 [project.scripts]
 plantgenie-api = "plantgenie_api.main:start"
