Adding some basic blast tasks for submitting blast jobs, polling for results and retrieving results

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastapi[standard]>=0.115.11",
     "pyarrow>=19.0.1",
     "pydantic>=2.10.6",
+    "python-multipart>=0.0.20",
     "redis>=5.2.1",
 ]
 
