--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   api:
     image: plantgenie-api:local-latest
@@ -10,6 +8,9 @@ services:
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DATA_PATH=/data
+    volumes:
+      - "${HOST_DATA_DIR}:/data:rw"
     depends_on:
       - rabbitmq
       - redis
@@ -25,6 +26,9 @@ services:
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DATA_PATH=/data
+    volumes:
+      - "${HOST_DATA_DIR}:/data:rw"
     depends_on:
       - rabbitmq
       - redis
