--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -27,7 +27,7 @@ jobs:
         run: |
           # Convert the repository name to lowercase to avoid errors
           repo_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$repo_name/plantgenie-ui:latest .
+          docker build -t ghcr.io/$repo_name/plantgenie-api:latest .
 
       # Step 4: Push the Docker image to GHCR
       - name: Push Docker image to GHCR
