Adding new api structure, blast service with openstack swift bucket storage

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,13 @@ services:
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - OS_AUTH_TYPE=${OS_AUTH_TYPE}
+      - OS_AUTH_URL=${OS_AUTH_URL}
+      - OS_IDENTITY_API_VERSION=${OS_IDENTITY_API_VERSION}
+      - OS_REGION_NAME=${OS_REGION_NAME}
+      - OS_INTERFACE=${OS_INTERFACE}
+      - OS_APPLICATION_CREDENTIAL_ID=${OS_APPLICATION_CREDENTIAL_ID}
+      - OS_APPLICATION_CREDENTIAL_SECRET=${OS_APPLICATION_CREDENTIAL_SECRET}
       - DATA_PATH=/data
     volumes:
       - "${HOST_DATA_DIR}:/data:rw"
@@ -26,6 +33,13 @@ services:
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - OS_AUTH_TYPE=${OS_AUTH_TYPE}
+      - OS_AUTH_URL=${OS_AUTH_URL}
+      - OS_IDENTITY_API_VERSION=${OS_IDENTITY_API_VERSION}
+      - OS_REGION_NAME=${OS_REGION_NAME}
+      - OS_INTERFACE=${OS_INTERFACE}
+      - OS_APPLICATION_CREDENTIAL_ID=${OS_APPLICATION_CREDENTIAL_ID}
+      - OS_APPLICATION_CREDENTIAL_SECRET=${OS_APPLICATION_CREDENTIAL_SECRET}
       - DATA_PATH=/data
     volumes:
       - "${HOST_DATA_DIR}:/data:rw"
