--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "aiohttp>=3.12.13",
     "celery[pydantic,redis]>=5.5.0",
     "duckdb>=1.2.0",
     "fastapi[standard]>=0.115.11",
@@ -30,6 +31,7 @@ build-backend = "hatchling.build"
 dev = [
     "black>=25.1.0",
     "celery-types>=0.23.0",
+    "ipython>=9.3.0",
     "mypy>=1.15.0",
     "pyrefly>=0.18.0",
     "ruff>=0.9.5",
