--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "celery[pydantic,redis]>=5.5.0",
     "duckdb>=1.2.0",
     "fastapi[standard]>=0.115.11",
+    "loguru>=0.7.3",
     "pyarrow>=19.0.1",
     "pydantic>=2.10.6",
     "python-keystoneclient>=5.6.0",
