--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "duckdb>=1.2.0",
     "fastapi[standard]>=0.115.11",
     "loguru>=0.7.3",
+    "networkx>=3.5",
     "pendulum>=3.1.0",
     "py-fasta-validator>=0.6",
     "pyarrow>=19.0.1",
