--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "loguru>=0.7.3",
     "networkx>=3.5",
     "pendulum>=3.1.0",
+    "polars[pyarrow]>=1.34.0",
     "py-fasta-validator>=0.6",
     "pyarrow>=19.0.1",
     "pydantic>=2.10.6",
@@ -22,6 +23,8 @@ dependencies = [
     "python-multipart>=0.0.20",
     "python-swiftclient>=4.8.0",
     "redis>=5.2.1",
+    "scipy>=1.16.2",
+    "statsmodels>=0.14.5",
 ]
 
 [project.scripts]
@@ -36,9 +39,12 @@ dev = [
     "black>=25.1.0",
     "celery-types>=0.23.0",
     "ipython>=9.3.0",
+    "jupyter>=1.1.1",
     "mypy>=1.15.0",
+    "notebook>=7.4.7",
     "pyrefly>=0.18.0",
     "ruff>=0.9.5",
+    "types-networkx>=3.5.0.20251001",
 ]
 
 [tool.mypy]
