--- a/packages/task-queue/pyproject.toml
+++ b/packages/task-queue/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "celery[pydantic]>=5.5.3",
+    "celery[pydantic,redis,rabbitmq]>=5.5.3",
     "networkx>=3.6",
     "py-fasta-validator>=0.6",
     "pydantic>=2.10.6",
