--- a/packages/task-queue/Dockerfile
+++ b/packages/task-queue/Dockerfile
@@ -49,4 +49,5 @@ ENV PYTHONPATH="/app/src"
 # obviates the need to do something like `source /app/.venv/bin/activate`
 ENV PATH="/app/.venv/bin:$PATH"
 
-CMD ["celery", "-A", "task_queue.celery.app", "worker", "--loglevel=info"]
+# CMD ["celery", "-A", "task_queue.celery.app", "worker", "--loglevel=info"]
+ENTRYPOINT ["celery", "-A", "task_queue.celery.app", "worker", "--loglevel=info"]
