--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,12 @@ module = ["testcontainers", "testcontainers.*"]
 ignore_errors = true
 ignore_missing_imports = true
 
+[[tool.mypy.overrides]]
+module = ["swiftclient", "swiftclient.*"]
+ignore_errors = true
+ignore_missing_imports = true
+
+
 [tool.black]
 line-length = 75
 
