--- a/packages/task-queue/pyproject.toml
+++ b/packages/task-queue/pyproject.toml
@@ -8,10 +8,12 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "celery[pydantic,redis,rabbitmq]>=5.5.3",
+    "celery[pydantic,redis]>=5.5.3",
     "networkx>=3.6",
     "py-fasta-validator>=0.6",
     "pydantic>=2.10.6",
+    "python-keystoneclient>=5.6.0",
+    "python-swiftclient>=4.8.0",
     "shared",
 ]
 
