--- a/packages/task-queue/pyproject.toml
+++ b/packages/task-queue/pyproject.toml
@@ -3,9 +3,7 @@ name = "task-queue"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "Jamie McCann", email = "jamie.mccann@umu.se" }
-]
+authors = [{ name = "Jamie McCann", email = "jamie.mccann@umu.se" }]
 requires-python = ">=3.13"
 dependencies = [
     "celery[pydantic,redis]>=5.5.3",
@@ -15,10 +13,8 @@ dependencies = [
     "python-keystoneclient>=5.6.0",
     "python-swiftclient>=4.8.0",
     "shared",
+    "go-enrich"
 ]
-
-# [tool.uv.workspace]
-# members = ["../shared"]
 
 
 [project.scripts]
@@ -40,12 +36,3 @@ dev = [
     "types-networkx>=3.6.0.20251127",
     "types-pika-ts>=1.3.0.20250914",
 ]
-
-[tool.mypy]
-exclude = [
-    "src/tests/.*"
-]
-
-[[tool.mypy.overrides]]
-module = "testcontainers.*"
-ignore_missing_imports = true
