--- a/.github/workflows/build-docker-image-release.yaml
+++ b/.github/workflows/build-docker-image-release.yaml
@@ -28,11 +28,25 @@ jobs:
         run: |
           # Convert the repository name to lowercase to avoid errors
           repo_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$repo_name/plantgenie-api:${{ github.ref_name }} .
+          docker build -t ghcr.io/$repo_name/fastapi-backend:${{ github.ref_name }} -f ./Dockerfile .
 
       # Step 4: Push the Docker image to GHCR
       - name: Push Docker image to GHCR
         run: |
           # Ensure the repository name is lowercase when pushing
           repo_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
-          docker push ghcr.io/$repo_name/plantgenie-api:${{ github.ref_name }}
+          docker push ghcr.io/$repo_name/fastapi-backend:${{ github.ref_name }}
+
+      # Step 3: Build the Docker image
+      - name: Build Docker image
+        run: |
+          # Convert the repository name to lowercase to avoid errors
+          repo_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$repo_name/celery-worker:${{ github.ref_name }} -f ./packages/task-queue/Dockerfile .
+
+      # Step 4: Push the Docker image to GHCR
+      - name: Push Docker image to GHCR
+        run: |
+          # Ensure the repository name is lowercase when pushing
+          repo_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
+          docker push ghcr.io/$repo_name/celery-worker:${{ github.ref_name }}
