Adding polling and retrieval of results to go enrichment analysis endpoint

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   api:
-    image: plantgenie-api:local-latest
+    # image: plantgenie-api:local-latest
+    image: ghcr.io/upsc-plantgenie/plantgenie-api/fastapi-backend:v0.4.0
     build:
       context: .
       dockerfile: Dockerfile
@@ -41,7 +42,8 @@ services:
     build:
       context: .
       dockerfile: packages/task-queue/Dockerfile
-    image: pg-task-queue:local-latest
+    # image: pg-task-queue:local-latest
+    image: ghcr.io/upsc-plantgenie/plantgenie-api/celery-worker:v0.4.0
     container_name: pg-local-celery
     entrypoint:
       - "celery"
